fixed overflowing image

--- a/UgpTheme/Assets/src/scss/_global.scss
+++ b/UgpTheme/Assets/src/scss/_global.scss
@@ -35,6 +35,12 @@ ul.dropdown-menu.navbar-cust.show,
 .dropdown-menu.navbar-cust {
     border: 0px;
     min-width: 16rem;
+
     top: 70%;
     margin-top: 0;
+}
+p {
+  img {
+    max-width: 100%;
+  }
 }
